2008-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (prune_dataticks) src/setshow.h: New routine to purge any
	axis tick labels left over from 'using xtics(n)' option during previous
	plot command.  Manually entered tick labels are kept.
	Bug #1850588

	* plot2d.c (plotrequest): Call prune_dataticks() before each new plot.

	* src/pm3d.c (pm3d_plot): When color information is given in a separate
	column, we must not use the interpolated z coordinate as for color.
	Bug #1783405

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (replot_command): Fix for replot with unknown terminal.

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image): Fix for maxcolors in "plot with
	image".

2008-01-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (store_polygon): Discard degenerate polygons.
	Bug #1727198

2008-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds): Rename exported variables TERM_* to
	GPVAL_TERM_* so that they match other internally maintained variables.

2008-01-07  Allin Cottrell  <cottrell@wfu.edu>

	* term/pdf.trm (EMF_setfont):  Add support for encodings
	iso_8859_1 iso_8859_2 iso_8859_9 iso_8859_15 cp1250

2008-01-06  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMF_setfont):  Add support for encodings
	iso_8859_2 iso_8859_9 cp1250 koi8r koi8u

2008-01-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Default to abobeglyphnames TRUE.

2008-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (plotrequest):  Revert inadvertent change to handling of
	'set log cb' introduced 2007-08-31.

2008-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Missing semicolon in definition of gpPt4.

2007-12-31  Allin Cottrell  <cottrell@wfu.edu>

	* src/term_api.h src/term.c (change_term):  Add a field to TERM_TABLE.
	term->tscale is a scaling factor between internal terminal coordinates